--- a/estilosPiola/estilos.css
+++ b/estilosPiola/estilos.css
@@ -10,7 +10,7 @@ a {
 }
 
 body {
-  font-size: 18px;
+  font-size: 16px;
   font-family: "Lato", sans-serif;
   font-weight: 400;
   background: #ececec;
@@ -18,20 +18,22 @@ body {
 
 header {
   width: 100%;
-  background: #475dc2;
-  color: white;
+  color: #6d72c3;
 }
 header .fila {
   width: 90%;
-  padding: 1em;
+  padding: 2em 0;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
 }
+header .fila .columna {
+  font-size: 1em;
+}
 header .fila .columna nav a {
-  color: white;
+  color: #414141;
 }
 
 main {
@@ -39,12 +41,11 @@ main {
 }
 main .contenedorPrincipal {
   width: 90%;
-  margin: 1em auto;
+  margin: 0 auto 1em auto;
 }
 main .contenedorPrincipal .seccionDash {
-  background: lightgray;
   border-radius: 20px;
-  padding: 1em;
+  padding: 1em 0;
 }
 main .contenedorPrincipal .seccionDash .fila {
   width: 100%;
@@ -54,9 +55,63 @@ main .contenedorPrincipal .seccionDash .fila .columna {
   flex-direction: row;
 }
 main .contenedorPrincipal .seccionDash .fila .menuDash {
-  width: 40%;
+  width: 100%;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+}
+main .contenedorPrincipal .seccionDash .fila .menuDash h1 {
+  font-size: 1.2em;
+}
+main .contenedorPrincipal .seccionDash .fila .menuDash .contFormSubida {
+  width: 16%;
+  max-width: 200px;
+}
+main .contenedorPrincipal .seccionDash .fila .menuDash .contFormSubida form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+main .contenedorPrincipal .seccionDash .fila .menuDash .contFormSubida form .btnCargar {
+  position: relative;
+  padding: 0.6em;
+  border-radius: 10px;
+  transition: background 0.5s ease;
+}
+main .contenedorPrincipal .seccionDash .fila .menuDash .contFormSubida form .btnCargar:hover {
+  background: rgba(0, 0, 0, 0.075);
+}
+main .contenedorPrincipal .seccionDash .fila .menuDash .contFormSubida form .btnCargar p {
+  color: #6d72c3;
+  font-weight: 900;
+}
+main .contenedorPrincipal .seccionDash .fila .menuDash .contFormSubida form .btnCargar #archivo {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: pointer;
+}
+main .contenedorPrincipal .seccionDash .fila .menuDash .contFormSubida form input[type=submit] {
+  padding: 0.6em;
+  font-size: 1em;
+  font-weight: 900;
+  border: none;
+  background: #6d72c3;
+  color: white;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background 0.5s ease;
+}
+main .contenedorPrincipal .seccionDash .fila .menuDash .contFormSubida form input[type=submit]:hover {
+  background: #4d5088;
+}
+main .contenedorPrincipal .seccionDash .fila .contenedorTabla {
+  width: 100%;
+  min-width: 620px;
 }
 main .contenedorPrincipal .seccionDash .fila .contenedorTabla table {
   width: 100%;
@@ -65,17 +120,23 @@ main .contenedorPrincipal .seccionDash .fila .contenedorTabla table tr td,
 main .contenedorPrincipal .seccionDash .fila .contenedorTabla table tr th {
   padding: 1em;
   text-align: left;
-  border-bottom: 2px solid #969696;
+}
+main .contenedorPrincipal .seccionDash .fila .contenedorTabla table tr td {
+  color: #414141;
+  border-bottom: 2px solid #b8b8b8;
+}
+main .contenedorPrincipal .seccionDash .fila .contenedorTabla table tr td a {
+  color: #414141;
 }
 main .contenedorPrincipal .seccionDash .fila .contenedorTabla table tr .grande {
-  width: 40%;
+  width: 30%;
 }
 main .contenedorPrincipal .seccionDash .fila .contenedorTabla table tr .chico {
   width: 10%;
 }
 
 footer {
-  background: #505050;
+  background: rgba(0, 0, 0, 0.507);
   bottom: 0px;
 }
 footer .fila {
