--- a/estilosPiola/estilos.scss
+++ b/estilosPiola/estilos.scss
@@ -8,27 +8,27 @@ a {
 	text-decoration: none;
 }
 body {
-	font-size: 18px;
+	font-size: 16px;
 	font-family: "Lato", sans-serif;
 	font-weight: 400;
 	background: rgb(236, 236, 236);
 }
 header {
 	width: 100%;
-	background: rgb(71, 93, 194);
-	color: white;
+	color: #6d72c3;
 	.fila {
 		width: 90%;
-		padding: 1em;
+		padding: 2em 0;
 		margin: 0 auto;
 		display: flex;
 		flex-direction: row;
 		align-items: center;
 		justify-content: space-between;
 		.columna {
+			font-size: 1em;
 			nav {
 				a {
-					color: white;
+					color: rgb(65, 65, 65);
 				}
 			}
 		}
@@ -38,11 +38,10 @@ main {
 	width: 100%;
 	.contenedorPrincipal {
 		width: 90%;
-		margin: 1em auto;
+		margin: 0 auto 1em auto;
 		.seccionDash {
-			background: rgb(211, 211, 211);
 			border-radius: 20px;
-			padding: 1em;
+			padding: 1em 0;
 			.fila {
 				width: 100%;
 				.columna {
@@ -50,21 +49,80 @@ main {
 					flex-direction: row;
 				}
 				.menuDash {
-					width: 40%;
+					width: 100%;
 					align-items: center;
-					justify-content: space-around;
+					justify-content: space-between;
+					h1 {
+						font-size: 1.2em;
+					}
+					.contFormSubida {
+						width: 16%;
+						max-width: 200px;
+						form {
+							display: flex;
+							flex-direction: row;
+							justify-content: space-between;
+							.btnCargar {
+								position: relative;
+								padding: 0.6em;
+								border-radius: 10px;
+								transition: background 0.5s ease;
+								&:hover {
+									background: rgba(0, 0, 0, 0.075);
+								}
+								p {
+									color: #6d72c3;
+									font-weight: 900;
+								}
+								#archivo {
+									position: absolute;
+									top: 0px;
+									left: 0px;
+									right: 0px;
+									bottom: 0px;
+									width: 100%;
+									height: 100%;
+									opacity: 0;
+									cursor: pointer;
+								}
+							}
+							input[type="submit"] {
+								padding: 0.6em;
+								font-size: 1em;
+								font-weight: 900;
+								border: none;
+								background: #6d72c3;
+								color: white;
+								border-radius: 10px;
+								cursor: pointer;
+								transition: background 0.5s ease;
+								&:hover {
+									background: #4d5088;
+								}
+							}
+						}
+					}
 				}
 				.contenedorTabla {
+					width: 100%;
+					min-width: 620px;
+					// overflow: scroll;
 					table {
 						width: 100%;
 						tr td,
 						tr th {
 							padding: 1em;
 							text-align: left;
-							border-bottom: 2px solid rgb(150, 150, 150);
+						}
+						tr td {
+							color: rgb(65, 65, 65);
+							border-bottom: 2px solid rgb(184, 184, 184);
+							a {
+								color: rgb(65, 65, 65);
+							}
 						}
 						tr .grande {
-							width: 40%;
+							width: 30%;
 						}
 						tr .chico {
 							width: 10%;
@@ -77,7 +135,7 @@ main {
 }
 
 footer {
-	background: rgb(80, 80, 80);
+	background: rgba(0, 0, 0, 0.507);
 	bottom: 0px;
 	.fila {
 		width: 100%;
