--- a/estilosPiola/estilosLogin.css
+++ b/estilosPiola/estilosLogin.css
@@ -5,73 +5,84 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 a {
   text-decoration: none;
 }
 
 body {
-  font-size: 18px;
+  font-size: 16px;
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  background: #ececec;
-  height: 100%;
-}
-
-html {
+  background: #4a378a;
+  background: linear-gradient(45deg, #4a378a 0%, #4c53c4 58%, #8088ff 100%);
+  position: relative;
+  width: 100%;
   height: 100%;
 }
 
 main {
   width: 100%;
+  height: 85%;
 }
 main .contenedorPrincipal {
   width: 100%;
+  height: 100%;
 }
 main .contenedorPrincipal .seccionLogin {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 100%;
   height: 100%;
-  padding: 7em;
-  background: #475dc2;
-  color: white;
+  color: #e5d4ed;
 }
 main .contenedorPrincipal .seccionLogin .cabeceraLogin {
   text-align: center;
 }
+main .contenedorPrincipal .seccionLogin .cabeceraLogin h2 {
+  color: #fff;
+  font-size: 3em;
+}
 main .contenedorPrincipal .seccionLogin .contenido .contenedorFormulario {
-  width: 30%;
+  max-width: 250px;
   margin: 0 auto;
 }
 main .contenedorPrincipal .seccionLogin .contenido .contenedorFormulario form {
   display: flex;
   flex-direction: column;
   text-align: center;
+  margin: 1em 0 0 0;
 }
-main .contenedorPrincipal .seccionLogin .contenido .contenedorFormulario form input,
-main .contenedorPrincipal .seccionLogin .contenido .contenedorFormulario form label {
-  margin: 0.2em;
-  padding: 0.4em;
+main .contenedorPrincipal .seccionLogin .contenido .contenedorFormulario form input {
+  margin: 0.8em 0;
+  padding: 0.6em;
   outline: none;
   border-radius: 20px;
   border: none;
-}
-main .contenedorPrincipal .seccionLogin .contenido .contenedorFormulario form input[type=email],
-main .contenedorPrincipal .seccionLogin .contenido .contenedorFormulario form input[type=password] {
-  padding: 0.6em;
+  font-size: 1em;
+  font-family: "Lato", sans-serif;
 }
 main .contenedorPrincipal .seccionLogin .contenido .contenedorFormulario form input[type=submit] {
-  margin: 2em 0;
-  background: #00005f;
+  cursor: pointer;
+  background: #38296b;
   color: white;
   padding: 0.6em;
-  font-size: 1em;
+  transition: background 0.5s ease;
+}
+main .contenedorPrincipal .seccionLogin .contenido .contenedorFormulario form input[type=submit]:hover {
+  background: rgba(56, 41, 107, 0.493);
 }
 
 footer {
-  background: #505050;
-  bottom: 0px;
+  background: rgba(0, 0, 0, 0.247);
+  width: 100%;
+  height: 15%;
 }
 footer .fila {
-  width: 100%;
   padding: 2em;
   text-align: center;
   color: white;
