--- a/estilosPiola/estilosLogin.scss
+++ b/estilosPiola/estilosLogin.scss
@@ -4,59 +4,77 @@
 	margin: 0;
 	box-sizing: border-box;
 }
+html {
+	height: 100%;
+}
 a {
 	text-decoration: none;
 }
 body {
-	font-size: 18px;
+	font-size: 16px;
 	font-family: "Lato", sans-serif;
 	font-weight: 400;
-	background: rgb(236, 236, 236);
-	height: 100%;
-}
-html {
+	background: rgb(74, 55, 138);
+	background: linear-gradient(
+		45deg,
+		rgba(74, 55, 138, 1) 0%,
+		rgba(76, 83, 196, 1) 58%,
+		rgba(128, 136, 255, 1) 100%
+	);
+	position: relative;
+	width: 100%;
 	height: 100%;
 }
 
 main {
 	width: 100%;
+	height: 85%;
 	.contenedorPrincipal {
 		width: 100%;
+		height: 100%;
 		.seccionLogin {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
 			width: 100%;
 			height: 100%;
-			padding: 7em;
-			background: rgb(71, 93, 194);
-			color: white;
+			color: #e5d4ed;
 			.cabeceraLogin {
 				text-align: center;
+				h2 {
+					color: #fff;
+					font-size: 3em;
+				}
 			}
 			.contenido {
 				.contenedorFormulario {
-					width: 30%;
+					// width: 30%;
+					// min-width: 800px;
+					max-width: 250px;
 					margin: 0 auto;
 					form {
 						display: flex;
 						flex-direction: column;
 						text-align: center;
-						input,
-						label {
-							margin: 0.2em;
-							padding: 0.4em;
+						margin: 1em 0 0 0;
+						input {
+							margin: 0.8em 0;
+							padding: 0.6em;
 							outline: none;
 							border-radius: 20px;
 							border: none;
-						}
-						input[type="email"],
-						input[type="password"] {
-							padding: 0.6em;
+							font-size: 1em;
+							font-family: "Lato", sans-serif;
 						}
 						input[type="submit"] {
-							margin: 2em 0;
-							background: rgb(0, 0, 95);
+							cursor: pointer;
+							background: rgb(56, 41, 107);
 							color: white;
 							padding: 0.6em;
-							font-size: 1em;
+							transition: background 0.5s ease;
+							&:hover {
+								background: rgba(56, 41, 107, 0.493);
+							}
 						}
 					}
 				}
@@ -66,10 +84,10 @@ main {
 }
 
 footer {
-	background: rgb(80, 80, 80);
-	bottom: 0px;
+	background: rgba(0, 0, 0, 0.247);
+	width: 100%;
+	height: 15%;
 	.fila {
-		width: 100%;
 		padding: 2em;
 		text-align: center;
 		color: white;
