--- a/estilosPiola/estilosLogin.scss
+++ b/estilosPiola/estilosLogin.scss
@@ -61,7 +61,7 @@ main {
 							margin: 0.8em 0;
 							padding: 0.6em;
 							outline: none;
-							border-radius: 20px;
+							border-radius: 10px;
 							border: none;
 							font-size: 1em;
 							font-family: "Lato", sans-serif;
@@ -77,6 +77,14 @@ main {
 							}
 						}
 					}
+				}
+				.contenedorError {
+					background: #c73434;
+					max-width: 250px;
+					margin: 0 auto;
+					text-align: center;
+					padding: 0.4em;
+					border-radius: 10px;
 				}
 			}
 		}
