--- a/estilosPiola/estilos.scss
+++ b/estilosPiola/estilos.scss
@@ -1,4 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap");
+@font-face {
+	font-family: "FASolid";
+	src: url("../assets/font/fa-solid-900.ttf");
+}
+html {
+	height: 100%;
+}
 * {
 	padding: 0;
 	margin: 0;
@@ -8,11 +15,18 @@ a {
 	text-decoration: none;
 }
 .btnDes,
-.btnEli {
+.btnEli,
+.btnEdi {
+	font-family: "FASolid";
 	width: 90%;
 	padding: 0.4em 0.6em;
 	border-radius: 10px;
 	color: white;
+	text-align: center;
+	cursor: pointer;
+}
+.btnEdi {
+	background: #6d72c3;
 }
 .btnDes {
 	background: #6d72c3;
@@ -21,10 +35,61 @@ a {
 	background: #c73434;
 }
 body {
+	height: 100%;
 	font-size: 16px;
 	font-family: "Lato", sans-serif;
 	font-weight: 400;
 	background: rgb(236, 236, 236);
+}
+.preVisualizador {
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	z-index: 3;
+	background: rgba(0, 0, 0, 0.733);
+	.fila {
+		.equis {
+			padding: 2em 4em;
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-end;
+			button {
+				background: none;
+				border: none;
+				font-size: 2em;
+				color: white;
+				cursor: pointer;
+			}
+		}
+		.contenedorMedia {
+			display: flex;
+			flex-direction: row;
+			justify-content: center;
+			video,
+			img,
+			.prevArchivo {
+				box-shadow: 4px 4px 20px #000;
+			}
+			.contPrevArch {
+				.prevArchivo {
+					background: rgb(53, 53, 53);
+					border-radius: 10px;
+					width: 200px;
+					height: 200px;
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+					justify-content: center;
+					color: white;
+					font-size: 1.6em;
+					p:first-child {
+						font-family: "FASolid";
+						font-size: 4em;
+					}
+				}
+			}
+		}
+	}
 }
 header {
 	width: 100%;
@@ -55,8 +120,16 @@ main {
 		.seccionDash {
 			border-radius: 20px;
 			padding: 1em 0;
+			.filaProgresoSubida {
+				margin: 1em 0;
+				// display: flex;
+				flex-direction: row;
+				justify-content: flex-end;
+				align-items: center;
+			}
 			.fila {
 				width: 100%;
+				position: relative;
 				.columna {
 					display: flex;
 					flex-direction: row;
@@ -126,6 +199,40 @@ main {
 						}
 					}
 				}
+				.colBtnCancelar {
+					input {
+						margin: 0 1em 0 0;
+						padding: 0.2em 0.6em;
+						font-family: "Lato", sans-serif;
+						font-weight: 900;
+						background: #c73434;
+						color: white;
+						border: none;
+						border-radius: 10px;
+						cursor: pointer;
+					}
+				}
+				.progresoSubida {
+					width: 16%;
+					display: flex;
+					flex-direction: column;
+					align-items: flex-end;
+					.contenedorProgreso {
+						width: 100%;
+						max-width: 200px;
+						background: rgb(199, 199, 199);
+						border-radius: 50px;
+						#indicadorPorc {
+							display: block;
+							background: #6d72c3;
+							color: white;
+							text-align: center;
+							font-family: "Lato", sans-serif;
+							font-size: 0.8em;
+							border-radius: 50px;
+						}
+					}
+				}
 				.contenedorTabla {
 					width: 100%;
 					min-width: 620px;
@@ -137,23 +244,82 @@ main {
 							padding: 1em;
 							text-align: left;
 						}
+						tr .btnPrev:hover {
+							cursor: pointer;
+							background: rgba(0, 0, 0, 0.082);
+						}
 						tr td {
+							&:first-child {
+								padding: 0em;
+							}
+							.miniatura {
+								width: 100%;
+								max-width: 35px;
+								max-height: 35px;
+								aspect-ratio: 1/1;
+								text-align: center;
+								overflow: hidden;
+								img {
+									width: 100%;
+								}
+								p {
+									color: rgb(114, 114, 114);
+									font-size: 1.8em;
+									font-family: "FASolid";
+								}
+							}
 							color: rgb(65, 65, 65);
 							border-bottom: 2px solid rgb(184, 184, 184);
+							.formEditar {
+								position: absolute;
+								border-radius: 20px;
+								background: rgb(143, 143, 143);
+								right: 0px;
+								padding: 1em;
+								p {
+									color: white;
+								}
+								input,
+								button {
+									color: white;
+									margin: 0.4em 0.2em;
+									padding: 0.6em;
+									border-radius: 10px;
+									border: none;
+									font-family: "Lato", sans-serif;
+									// cursor: pointer;
+								}
+								button {
+									background: none;
+									cursor: pointer;
+								}
+								input[type="submit"] {
+									background: #42457a;
+									cursor: pointer;
+								}
+								input[type="text"] {
+									color: rgb(65, 65, 65);
+									outline: none;
+								}
+							}
 						}
 						tr .grande {
-							width: 30%;
+							width: 29%;
 						}
 						tr .chico {
-							width: 10%;
+							width: 3%;
 						}
 					}
 				}
 				.contenidoEliminar {
 					margin: 1em 0;
+					display: flex;
+					flex-direction: column;
+					align-items: flex-end;
 					.contenedorFormEliminar {
 						display: flex;
 						flex-direction: column;
+						align-items: flex-end;
 						h2,
 						p,
 						div {
