--- a/estilosPiola/_headeryprev.scss
+++ b/estilosPiola/_headeryprev.scss
@@ -50,7 +50,6 @@
 }
 header {
 	width: 100%;
-	color: #6d72c3;
 	max-width: 1280px;
 	margin: 0 auto;
 	.fila {
@@ -61,9 +60,30 @@ header {
 		flex-direction: row;
 		align-items: center;
 		justify-content: space-between;
+		border-bottom: #6d71c36b solid 1px;
+		.titulo {
+			a {
+				color: #6d72c3;
+			}
+		}
 		.columna {
+			width: 50%;
 			font-size: 1em;
+		}
+		.columnaNav {
+			display: flex;
+			flex-direction: row;
+			justify-content: flex-end;
 			nav {
+				min-width: 14em;
+				display: flex;
+				flex-direction: row;
+				align-items: center;
+				justify-content: space-between;
+				.iconoLogout {
+					font-size: 1.2em;
+					font-family: "FASolid";
+				}
 				a {
 					color: rgb(65, 65, 65);
 				}
