--- a/estilosPiola/estilos.css
+++ b/estilosPiola/estilos.css
@@ -108,7 +108,6 @@ body {
 
 header {
   width: 100%;
-  color: #6d72c3;
   max-width: 1280px;
   margin: 0 auto;
 }
@@ -120,11 +119,32 @@ header .fila {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  border-bottom: #6d71c36b solid 1px;
+}
+header .fila .titulo a {
+  color: #6d72c3;
 }
 header .fila .columna {
+  width: 50%;
   font-size: 1em;
 }
-header .fila .columna nav a {
+header .fila .columnaNav {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+header .fila .columnaNav nav {
+  min-width: 14em;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+header .fila .columnaNav nav .iconoLogout {
+  font-size: 1.2em;
+  font-family: "FASolid";
+}
+header .fila .columnaNav nav a {
   color: #414141;
 }
 
@@ -267,8 +287,11 @@ main .contenedorPrincipal .seccionDash .fila .contenedorPanelDeArchivos .contene
 main .contenedorPrincipal .seccionDash .fila .contenedorPanelDeArchivos .contenedorArchivos .contenedorPadding .contenedorArchivo {
   width: 100%;
   background: #e0e0e0;
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.137);
   border-radius: 10px;
+  transition: box-shadow 0.2s ease;
+}
+main .contenedorPrincipal .seccionDash .fila .contenedorPanelDeArchivos .contenedorArchivos .contenedorPadding .contenedorArchivo:hover {
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
 }
 main .contenedorPrincipal .seccionDash .fila .contenedorPanelDeArchivos .contenedorArchivos .contenedorPadding .contenedorArchivo .miniaturaArchivo {
   cursor: pointer;
