--- a/estilosPiola/_headeryprev.scss
+++ b/estilosPiola/_headeryprev.scss
@@ -18,30 +18,45 @@
 				cursor: pointer;
 			}
 		}
-		.contenedorMedia {
+		.contPrev {
+			width: 95%;
+			margin: 0 auto;
 			display: flex;
 			flex-direction: row;
-			justify-content: center;
-			video,
-			img,
-			.prevArchivo {
-				box-shadow: 4px 4px 20px #000;
+			align-items: center;
+			justify-content: space-between;
+			#izqPrev,
+			#derPrev {
+				cursor: pointer;
 			}
-			.contPrevArch {
+			.contenedorMedia {
+				display: flex;
+				flex-direction: row;
+				justify-content: center;
+				video,
+				img,
 				.prevArchivo {
-					background: rgb(53, 53, 53);
-					border-radius: 10px;
-					width: 200px;
-					height: 200px;
-					display: flex;
-					flex-direction: column;
-					align-items: center;
-					justify-content: center;
-					color: white;
-					font-size: 1.6em;
-					p:first-child {
-						font-family: "FASolid";
-						font-size: 4em;
+					box-shadow: 4px 4px 20px #000;
+				}
+				img {
+					height: 500px;
+				}
+				.contPrevArch {
+					.prevArchivo {
+						background: rgb(53, 53, 53);
+						border-radius: 10px;
+						width: 200px;
+						height: 200px;
+						display: flex;
+						flex-direction: column;
+						align-items: center;
+						justify-content: center;
+						color: white;
+						font-size: 1.6em;
+						p:first-child {
+							font-family: "FASolid";
+							font-size: 4em;
+						}
 					}
 				}
 			}
@@ -63,7 +78,7 @@ header {
 		border-bottom: #6d71c36b solid 1px;
 		.titulo {
 			a {
-				color: #6d72c3;
+				color: $primario;
 			}
 		}
 		.columna {
@@ -85,7 +100,7 @@ header {
 					font-family: "FASolid";
 				}
 				a {
-					color: rgb(65, 65, 65);
+					color: $oscuroPrimario;
 				}
 			}
 		}
