Renombrando archivos en la subida

--- a/estilosPiola/_main.scss
+++ b/estilosPiola/_main.scss
@@ -72,7 +72,7 @@ main {
 									// z-index: 2;
 								}
 							}
-							input[type="submit"] {
+							input[type="button"] {
 								padding: 0.6em;
 								font-size: 1em;
 								font-weight: 900;
